# axionax-monolith

./: .clinerules  .env.example  .gitattributes  .gitignore  .gitmodules  .windsurfrules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  GET_STARTED.md  JOIN.md  MASTER_SUMMARY.md  NODE_PACKAGE_README.md  PRODUCTION_READINESS.md  README.md  RULES.md  RUN.md  SECURITY_AUDIT_REPORT.md  SECURITY_REMEDIATION_PLAN.md  TESTNET_READINESS.md  WHITEPAPER.md  WORKER_SETUP_COMPLETE.md  docker-compose.dev.yml  docker-compose.yml  hydra_manager.py  netlify.toml  package.json  pnpm-lock.yaml  vps-nuclear-setup.sh  worker_key.json
core/: CHANGELOG.md  Cargo.toml  README.md
core/.cargo/: audit.toml
core/benches/: blockchain_bench.rs  consensus_bench.rs  crypto_bench.rs  state_bench.rs
core/bridge/rust-python/: Cargo.toml
core/bridge/rust-python/src/: lib.rs
core/configs/: protocol.mainnet.yaml  protocol.testnet.yaml
core/core/asr/: Cargo.toml
core/core/asr/src/: lib.rs
core/core/blockchain/: Cargo.toml
core/core/blockchain/src/: lib.rs  mempool.rs  storage.rs  validation.rs
core/core/cli/: Cargo.toml
core/core/cli/src/: lib.rs  main.rs
core/core/consensus/src/: lib.rs  merkle.rs  proof_of_light.rs
core/core/crypto/: Cargo.toml
core/core/crypto/src/: lib.rs  vrf.rs
core/core/da/: Cargo.toml
core/core/da/src/: lib.rs
core/core/events/src/: lib.rs
core/core/genesis/: Cargo.toml
core/core/genesis/src/: lib.rs
core/core/governance/: Cargo.toml
core/core/governance/src/: lib.rs
core/core/metrics/: Cargo.toml
core/core/metrics/src/: lib.rs
core/core/network/: Cargo.toml  README.md
core/core/network/src/: behaviour.rs  config.rs  lib.rs  manager.rs  protocol.rs  reputation.rs
core/core/node/: Cargo.toml
core/core/node/examples/: full_node.rs
core/core/node/src/: lib.rs  main.rs
core/core/ppc/src/: lib.rs
core/core/rpc/: Cargo.toml
core/core/rpc/examples/: state_rpc_integration.rs
core/core/rpc/src/: governance_rpc.rs  health.rs  http_health.rs  lib.rs  server.rs  staking_rpc.rs
core/core/staking/src/: lib.rs
core/core/state/: Cargo.toml
core/core/state/src/: lib.rs  merkle.rs
core/core/vrf/src/: lib.rs
core/deai/: .env.example  CONTRACT_INTEGRATION.md  asr.py  bridge_test.py  compute_backend.py  contract_manager.py  job_marketplace.json  network_manager.py  requirements.txt  rpc_client.py  sandbox.py  test_contract_manager.py  test_job_execution.py  test_optimization.py  test_worker_connection.py  wallet_manager.py  worker_config.toml  worker_node.py
core/deai/optical/: README.md  __init__.py  tensor.py
core/docs/: API_REFERENCE.md  ARCHITECTURE_OVERVIEW.md  MAINNET_GENESIS_CHECKLIST.md  NETWORK_NODES.md  PROJECT_ASCENSION.md  README.md  RPC_API.md  UI_SPECIFICATIONS.md
core/docs/sdk-types/: governance-client.ts  governance.ts  staking-client.ts  staking.ts
core/environments/testnet/: README.md
core/environments/testnet/Axionax_v1.5_Testnet_in_a_Box/deployer/: deploy_token.js
core/environments/testnet/Axionax_v1.6_Testnet_in_a_Box/deployer/: deploy_token.js
core/environments/testnet/Axionax_v1.6_Testnet_in_a_Box/faucet/: index.js
core/examples/: deai_simple_training.py  test_amd_gpu.py
core/examples/contracts/: ComputeEscrow.sol  JobMarketplace.sol
core/examples/notebooks/: vertex_ai_quickstart.ipynb
core/photonic/: README.md
core/src/: health.rs  lib.rs
core/tests/: integration_staking_governance.rs  security_adversarial.rs  test_cyber_threats.py
core/tools/: create_genesis.py  genesis.json  genesis_canonical.json  genesis_mainnet.json  verify_genesis.py
core/tools/faucet/: Cargo.toml
core/tools/faucet/src/: lib.rs  main.rs
services/core/core/: .env.example  .gitignore  DEPENDENCIES.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_SUMMARY.md  LICENSE  Makefile  QUICK_START.md  README.md  SECURITY_AUDIT.md  clippy.toml  install_dependencies_linux.sh  install_dependencies_macos.sh  install_dependencies_windows.ps1  metrics.toml  package.json  prometheus.yml  pyproject.toml
services/core/core/.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  markdown-link-check-config.json
services/core/core/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
services/core/core/.github/workflows/: build.yml  python-ci.yml  rust-ci.yml
services/core/core/benches/: consensus_bench.rs
services/core/core/bridge/rust-python/: .clippy.toml  build.sh
services/core/core/bridge/rust-python/src/: lib.rs  simple_wrapper.rs
services/core/core/core/cli/: Cargo.toml
services/core/core/core/config/: Cargo.toml
services/core/core/core/consensus/: Cargo.toml
services/core/core/core/crypto/: USAGE.md
services/core/core/core/events/: Cargo.toml
services/core/core/core/metrics/: Cargo.toml
services/core/core/core/network/: Cargo.toml
services/core/core/core/ppc/: Cargo.toml
services/core/core/core/rpc/: Cargo.toml
services/core/core/core/staking/: Cargo.toml
services/core/core/core/vrf/: Cargo.toml
services/core/core/deai/: .env.example  README.md  RUNBOOK.md  WEB_INTEGRATION.md  deai_monitor.py  deai_submit.py  find_peers.py  fraud_detection.py  hello_deai.py  rpc_client.py  sandbox.py  wallet_manager.py  worker_config.toml  worker_node.py
services/core/core/docs/: ARCHITECTURE_OVERVIEW.md  MONOLITH_ROADMAP.md  README.md  RPC_API.md  RUNBOOK.md  SENTINELS.md
services/core/core/examples/: asr_selection.py  run_node.rs  send_transaction.rs  test_cpu_worker.py
services/core/core/examples/contracts/: README.md  SimpleNFT.sol  SimpleStaking.sol  SimpleToken.sol
services/core/core/src/: health.rs  lib.rs  main.rs
services/core/core/tests/: integration_simple.py  integration_staking_governance.rs  integration_test.py  integration_test_light.py  load_test.py  test_rpc_load.py
services/core/core/tools/: GENESIS_LAUNCH_README.md  allocations-example.json  create_genesis.py  genesis.json  genesis_canonical.json  genesis_mainnet.json  launch_genesis.sh  migrate_go_to_rust.py  validators-active.json  validators-example.json
services/core/core/tools/faucet/: Cargo.toml
(+520 files in other folders)
