[package]
name = "axionax-core"
version = "1.8.0"
edition = "2021"
authors = ["axionax protocol Team <team@axionax.org>"]
description = "Axionax Protocol Core - High-Performance Blockchain"
license = "AGPL-3.0"

[workspace]
members = [
    "core/consensus",
    "core/blockchain",
    "core/state",
    "core/network",
    "core/crypto",
    "core/rpc",
    "core/node",
    "core/config",
    "core/staking",
    "core/governance",
    "core/ppc",
    "core/da",
    "core/asr",
    "core/vrf",
    "bridge/rust-python",
    "tools/faucet"
]



resolver = "2"

# Dependencies for root package (needed for benchmarks)
[dependencies]
consensus = { path = "core/consensus" }
blockchain = { path = "core/blockchain" }
state = { path = "core/state" }
crypto = { path = "core/crypto" }

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3.0"

# Benchmark definitions
[[bench]]
name = "blockchain_bench"
harness = false

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "consensus_bench"
harness = false

[[bench]]
name = "state_bench"
harness = false


[workspace.package]
version = "1.8.0"
authors = ["axionax protocol Team <team@axionax.org>"]
edition = "2021"
rust-version = "1.70"
license = "MIT"
repository = "https://github.com/axionaxprotocol/axionax-core"
homepage = "https://axionax.org"
documentation = "https://docs.axionax.org"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Networking
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "gossipsub", "mdns"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"
parity-scale-codec = { version = "3.6", features = ["derive"] }

# Cryptography
ed25519-dalek = "2.1"
sha3 = "0.10"
blake2 = "0.10"
rand = "0.8"
hex = "0.4"

# Database
rocksdb = "0.22"
sled = "0.34"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Testing
criterion = "0.5"

# Python Bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Build optimization profiles
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[profile.bench]
inherits = "release"
