[package]
name = "axionax-python"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "axionax_python"
crate-type = ["cdylib"]

[dependencies]
# pyo3 >= 0.24.1 fixes RUSTSEC-2025-0020 (buffer overflow in PyString::from_object)
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py310"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"

# axionax core dependencies
consensus = { path = "../../core/consensus" }
blockchain = { path = "../../core/blockchain" }
crypto = { path = "../../core/crypto" }

[build-dependencies]
pyo3-build-config = "0.24"
