[package]
name = "asr"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Auto-Selection Router - Worker selection with VRF and fairness"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha3 = { workspace = true }
rand = "0.8"

[dev-dependencies]
tempfile = "3.0"
