[package]
name = "blockchain"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true }

# Persistent storage
sled = "0.34"
bincode = { version = "2.0", features = ["serde"] }

# Internal dependencies
crypto = { path = "../crypto" }
genesis = { path = "../genesis" }
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"
