[package]
name = "da"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Data Availability Layer - Erasure coding and challenge retrieval"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha3 = { workspace = true }
hex = "0.4"


[dev-dependencies]
tempfile = "3.0"
