[package]
name = "genesis"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Genesis Block Generator - Create genesis blocks for new chains"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
chrono = "0.4"

[dev-dependencies]
tempfile = "3.0"
