[package]
name = "governance"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "On-chain Governance Module for Axionax Protocol"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Internal dependencies
staking = { path = "../staking" }

[dev-dependencies]
tempfile = "3.0"
