[package]
name = "rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Web framework
axum = "0.7"
tower = { version = "0.4", features = ["limit", "buffer"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
http = "1.0"

# Async runtime
tokio = { workspace = true, features = ["full"] }

# JSON-RPC and serialization
serde = { workspace = true }
serde_json = { workspace = true }
jsonrpsee = { version = "0.24", features = ["server", "macros"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Encoding
hex = "0.4"

# Internal dependencies
state = { path = "../state" }
blockchain = { path = "../blockchain" }
crypto = { path = "../crypto" }
staking = { path = "../staking" }
governance = { path = "../governance" }
metrics = { path = "../metrics" }
events = { path = "../events" }


[dev-dependencies]
tempfile = "3.8"
