[package]
name = "state"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
redb = "2"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"

# For async operations
tokio = { workspace = true }

# Internal dependencies
blockchain = { path = "../blockchain" }
crypto = { path = "../crypto" }
hex = "0.4"

[dev-dependencies]
tempfile = "3.0"
