[project]
name = "axionax-deai"
version = "1.8.0"
description = "DeAI analytics and safety modules for the axionax core."
authors = [
    { name = "axionax protocol Team", email = "team@axionax.org" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0"
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "pylint>=2.17.0",
    "mypy>=1.4.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["deai"]
