[package]
name = "network"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# P2P networking (workspace 0.55 — fixes ring 0.16 CVE via rcgen 0.13+)
libp2p = { workspace = true, features = [
    "tokio",
    "quic",
    "kad",
    "identify",
    "ping",
    "macros",
] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Utilities
futures = "0.3"
async-trait = "0.1"
sha3 = "0.10"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
