[package]
name = "staking"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Native Staking Module for Axionax Protocol"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Internal dependencies
crypto = { path = "../crypto" }

[dev-dependencies]
tempfile = "3.0"
