[package]
name = "vrf"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Verifiable Random Function - Delayed randomness for fair selection"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha3 = { workspace = true }

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"


[dev-dependencies]
tempfile = "3.0"
